--- a/oscar/templates/basket/basket.html
+++ b/oscar/templates/basket/basket.html
@@ -38,135 +38,71 @@ Basket | {{ block.super }}
 
 {% if request.basket.lines.count %}
 
-<form action="." method="post" class="basket_summary">
+<form action="." method="post" class="basket_summary" id="basket_formset">
     {% csrf_token %}
     {{ formset.management_form }}
     <table class="table table-striped table-bordered">
-        <thead>
-        <tr>
-            <th></th>
-            <th>Product</th>
-            <th>Availability</th>
-            <th>Quantity</th>
-            <th>Unit price</th>
-            <th>Subtotal</th>
-			{% if request.user.is_authenticated %}
-            <th>Save for later&hellip;</th>
-			{% endif %}
-            <th>Remove?</th>
-        </tr>
-        </thead>
         <tbody>
         {% for form in formset %}
         <tr>
 			<td>
+				{{ form.id }}
 				{% product_image form.instance.product as product_image %}
 				<div style="width:100px">
 					<a href="{{ product.get_absolute_url }}"><img class="thumbnail" src="{{ product_image.thumbnail_url }}" alt="{{ product.get_title }}"></a>
 				</div>
-            <td>{{ form.id }}<a href="{{ form.instance.product.get_absolute_url }}">{{ form.instance.description }}</a></td>
-            <td>{{ form.instance.product.stockrecord.availability }}</td>
-            <td>{{ form.quantity }}</td>
+				<a href="{{ form.instance.product.get_absolute_url }}">{{ form.instance.description }}</a><br/>
+				{{ form.instance.product.stockrecord.availability }}
+			</td>
+			<td>
+				{{ form.quantity }} <button class="btn btn-small">Update</button><br/>
+				<a href="#" data-id="{{ forloop.counter0 }}" class="remove">Remove</a>
+				{% if request.user.is_authenticated %}
+					| <a href="#" data-id="{{ forloop.counter0 }}" class="save">Save for later</a>
+				{% endif %}
+				<div style="display:none">
+					{{ form.save_for_later }}
+					{{ form.DELETE }}
+				</div>
+			</td>
             <td>{{ form.instance.unit_price_incl_tax|currency }}</td>
             <td>{{ form.instance.line_price_incl_tax|currency }}</td>
-			{% if request.user.is_authenticated %}
-            <td>{{ form.save_for_later }}</td>
-			{% endif %}
-            <td>{{ form.DELETE }}</td>
         </tr>
         {% endfor %}
-        {% for discount in basket.discounts %}
-        <tr>
-            <td colspan="7">{{ discount.name }}</td>
-            <td colspan="3">-{{ discount.discount|currency }}</td>
-        </tr>
-        {% endfor %}
-        <tr>
-            <th colspan="5">Basket total</th>
-            <td>{{ basket.total_incl_tax|currency }}</td>
-			<td></td>
-        </tr>
-        <tr>
-			<th colspan="5">Estimated shipping ({{ shipping_method.name }})</th>
-            <td>{{ shipping_charge_incl_tax|currency }}</td>
-			<td></td>
-        </tr>
-        <tr>
-            <th colspan="5">Order total</th>
-            <td>{{ order_total_incl_tax|currency }}</td>
-			<td></td>
-        </tr>
         </tbody>
     </table>
-
-	<div class="row-fluid">
-		<div class="span6">
-			{% with product.images.all.0 as image %}
-		    <div class="image_container">
-		        <a href="{{ product.get_absolute_url }}"><img class="thumbnail" src="{{ image.original.url }}" alt="{{ product.get_title }}"></a>
-		    </div>
-		    {% endwith %}
-		</div>
-		<div class="span2">
-		    {{ form.quantity }}
-		</div>
-		<div class="span2">
-		</div>
-		<div class="span2">
-		</div>
-	</div>
-	
-	<div class="sub-heading">
-		<h3>Basket Updates</h3>
-	</div>
-	
-	<div class="row-fluid">
-		<h4>Delivery Destination</h4>
-		<div class="span4">
-	        <div class="btn-group">
-        	    <button class="btn btn-mini dropdown-toggle" data-toggle="dropdown">
-            		USA
-            		<span class="caret"></span>
-            	</button>
-            	<ul class="dropdown-menu">
-            		<li>
-            			<a href="#">UK</a>
-            		</li>
-            		<li>
-            			<a href="#">Ireland</a>
-            		</li>
-            		<li>
-            			<a href="#">Canada</a>
-            		</li>
-            	</ul>
-        	</div>
-        </div>
-        <div class="span7">
-        	<table class="table table-striped table-condensed">
-        		<tbody>
-        			<tr>
-        				<th>Basket Subtotal</th>
-        				<td>{{ form.instance.line_price_excl_tax|currency }}</td>
-        			</tr>
-        			<tr>
-        				<th>Delivery From</th>
-        				<td></td>
-        			</tr>
-        			<tr>
-        				<th>Total</th>
-        				<td>{{ form.instance.line_price_incl_tax|currency }}</td>
-        			</tr>
-        		</tbody>
-        	</table>
-        </div>
-	</div>
-
-    <div class="form-actions">
-        Made changes? <input type="submit" value="Update basket" class="btn"/>
-        <a href="{% url checkout:index %}" class="pull-right btn btn-large btn-primary">Proceed to checkout</a>
-    </div>
-
 </form>
+
+<div id="basket_totals">
+	<table>
+		{% for discount in basket.discounts %}
+		<tr>
+			<td colspan="7">{{ discount.name }}</td>
+			<td colspan="3">-{{ discount.discount|currency }}</td>
+		</tr>
+		{% endfor %}
+		<tr>
+			<th colspan="5">Basket total</th>
+			<td>{{ basket.total_incl_tax|currency }}</td>
+			<td></td>
+		</tr>
+		<tr>
+			<th colspan="5">Shipping ({{ shipping_method.name }})</th>
+			<td>{{ shipping_charge_incl_tax|currency }}</td>
+			<td></td>
+		</tr>
+		<tr>
+			<th colspan="5">Order total</th>
+			<td>{{ order_total_incl_tax|currency }}</td>
+			<td></td>
+		</tr>
+	</table>
+</div>
+	
+<div class="form-actions">
+	<a href="{% url checkout:index %}" class="pull-right btn btn-large btn-primary">Proceed to checkout</a>
+</div>
+
 {% if request.basket.pk %}
 
 <h4>Basket vouchers</h4>
@@ -206,45 +142,49 @@ Basket | {{ block.super }}
 <p>Your saved basket is empty.</p>
 
 {% else %}
-<form action="{% url basket:saved %}" method="post" class="form-stacked later_summary">
+<form action="{% url basket:saved %}" method="post" class="form-stacked later_summary" id="saved_basket_formset">
     {% csrf_token %}
 
     {{ saved_formset.management_form }}
 
     <table class="bordered-table zebra-striped">
-        <thead>
-        <tr>
-            <th>Product</th>
-            <th>Unit Price Excl. Tax</th>
-            <th>Tax</th>
-            <th>Line Price Excl. Tax</th>
-            <th>Line Price Incl. Tax</th>
-            <th>Move to basket&hellip;</th>
-            <th>Delete?</th>
-        </tr>
-        </thead>
         <tbody>
         {% for form in saved_formset %}
         <tr>
-            <td>{{ form.id }}<a href="{{ form.instance.product.get_absolute_url }}">{{ form.instance.description }}</a>
-            </td>
-            <td>{{ form.instance.unit_price_excl_tax|currency }}</td>
-            <td>{{ form.instance.unit_tax|currency }}</td>
-            <td>{{ form.instance.line_price_excl_tax|currency }}</td>
+			<td>
+				{{ form.id }}
+				{% product_image form.instance.product as product_image %}
+				<div style="width:100px">
+					<a href="{{ product.get_absolute_url }}"><img class="thumbnail" src="{{ product_image.thumbnail_url }}" alt="{{ product.get_title }}"></a>
+				</div>
+				<a href="{{ form.instance.product.get_absolute_url }}">{{ form.instance.description }}</a><br/>
+				{{ form.instance.product.stockrecord.availability }}
+			</td>
+			<td>
+				<a href="#" data-id="{{ forloop.counter0 }}" class="remove">Remove</a>
+				| <a href="#" data-id="{{ forloop.counter0 }}" class="move">Move to basket</a>
+				<div style="display:none">
+					{{ form.move_to_basket }}
+					{{ form.DELETE }}
+				</div>
+			</td>
+            <td>{{ form.instance.unit_price_incl_tax|currency }}</td>
             <td>{{ form.instance.line_price_incl_tax|currency }}</td>
-            <td>{{ form.move_to_basket }}</td>
-            <td>{{ form.DELETE }}</td>
         </tr>
         {% endfor %}
         </tbody>
     </table>
 
     <div class="form-actions">
-        <input type="submit" value="Apply Changes" class="btn"/>
+		<a href="{% url checkout:index %}" class="pull-right btn btn-primary btn-large">Proceed to Checkout</a>
     </div>
 
 </form>
 {% endif %}
 
 {% endblock content %}
+
+{% block onbodyload %}
+oscar.basket.init();
+{% endblock %}
 
