--- a/oscar/templates/dashboard/catalogue/category_delete.html
+++ b/oscar/templates/dashboard/catalogue/category_delete.html
@@ -7,12 +7,7 @@
         <span class="divider">/</span>
     </li>
     <li>
-        <a href="{% if parent %}
-                        {% url dashboard:catalogue-category-detail-list pk=parent.pk %}
-                    {% else %}
-                        {% url dashboard:catalogue-category-list %}
-                    {% endif %}"
-                    >Categories</a>
+        <a href="{% if parent %}{% url dashboard:catalogue-category-detail-list pk=parent.pk %}{% else %}{% url dashboard:catalogue-category-list %}{% endif %}">Categories</a>
         <span class="divider">/</span>
     </li>
     <li class="active"><a href=".">Delete category?</a></li>
@@ -26,19 +21,13 @@
 {% endblock header%}
 
 {% block dashboard_content %}
-{% with object.get_parent as parent %}
 <form action="." method="post">
     {% csrf_token %}
     {{ form }}
     <p>Delete category <strong>{{ object.name }}</strong> - are you sure?</p>
     <div class="form-actions">
         <button type="submit" class="btn btn-danger">Delete</button>
-        or <a href="{% if parent %}
-                        {% url dashboard:catalogue-category-detail-list pk=parent.pk %}
-                    {% else %}
-                        {% url dashboard:catalogue-category-list %}
-                    {% endif %}">cancel</a>
+        or <a href="{% if parent %}{% url dashboard:catalogue-category-detail-list pk=parent.pk %}{% else %}{% url dashboard:catalogue-category-list %}{% endif %}">cancel</a>
     </div>
 </form>
-{% endwith %}
 {% endblock %}
